add support for multiple type selections